--- a/af-2-ayyashzamny/frontend/package.json
+++ b/af-2-ayyashzamny/frontend/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@clerk/clerk-react": "^5.30.0",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
@@ -11,6 +12,7 @@
     "axios": "^1.8.4",
     "bootstrap": "^5.3.5",
     "d3-scale": "^4.0.2",
+    "dotenv": "^16.5.0",
     "framer-motion": "^12.7.3",
     "leaflet": "^1.9.4",
     "react": "^19.1.0",
