--- a/af-2-ayyashzamny/frontend/package.json
+++ b/af-2-ayyashzamny/frontend/package.json
@@ -9,10 +9,12 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
     "animate.css": "^4.1.1",
-    "axios": "^1.8.4",
+    "axios": "^1.9.0",
     "bootstrap": "^5.3.5",
+    "cors": "^2.8.5",
     "d3-scale": "^4.0.2",
     "dotenv": "^16.5.0",
+    "firebase": "^9.0.0",
     "framer-motion": "^12.7.3",
     "leaflet": "^1.9.4",
     "react": "^19.1.0",
@@ -20,18 +22,17 @@
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-leaflet": "^5.0.0",
-    "react-router-dom": "^7.5.0",
+    "react-router-dom": "^7.5.2",
     "react-scripts": "5.0.1",
     "react-simple-maps": "^3.0.0",
+    "sweetalert2": "^11.19.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
@@ -50,8 +51,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "gh-pages": "^6.3.0"
   }
 }
