--- a/af-2-ayyashzamny/frontend/package.json
+++ b/af-2-ayyashzamny/frontend/package.json
@@ -11,6 +11,7 @@
     "animate.css": "^4.1.1",
     "axios": "^1.8.4",
     "bootstrap": "^5.3.5",
+    "canvas-confetti": "^1.9.3",
     "d3-scale": "^4.0.2",
     "dotenv": "^16.5.0",
     "framer-motion": "^12.7.3",
